--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-:wolf_heart_eyes:
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>pool-water</title>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+  </head>
+  <body>
+    <section id="stream">
+      <header id="top">POOL<br>WATER</header>
+      <img src="im-crushed.png" class="fit">
+    </section>
+  </body>
+</html>
